# multiremote-fm

./: .gitignore  LICENSE  README.md  multiremote_fm.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
tests/: test_ftp.py  test_local_dir.py
